finished log and copyPasted server structure

--- a/src/makefile
+++ b/src/makefile
@@ -1,16 +1,16 @@
+all: server client
 
-server: server.c concurrencyUtils.o connectionUtils.o logUtils.o
+server: server.c utils.h concurrencyUtils.o connectionUtils.o logUtils.o
 	gcc -g server.c concurrencyUtils.o connectionUtils.o logUtils.o -o server
-client: client.c concurrencyUtils.o connectionUtils.o logUtils.o
+client: client.c utils.h concurrencyUtils.o connectionUtils.o logUtils.o
 	gcc -g server.c concurrencyUtils.o connectionUtils.o logUtils.o -o client
 
-concurrencyUtils.o: concurrencyUtils.h concurrencyUtils.c 
+concurrencyUtils.o: concurrencyUtils.h concurrencyUtils.c utils.h
 	gcc -g -c concurrencyUtils.c
-connectionUtils.o: connectionUtils.c connectionUtils.h
+connectionUtils.o: connectionUtils.c connectionUtils.h utils.h
 	gcc -c connectionUtils.c
-logUtils.o : logUtils.c logUtils.h
+logUtils.o : logUtils.c logUtils.h utils.h
 	gcc -c logUtils.c
-
 
 clean:
 	rm *.o
