--- a/src/makefile
+++ b/src/makefile
@@ -1,16 +1,23 @@
-all: server client
+CC=gcc
+CFLAGS=-g
+COFLAGS=-g -c
+OBJ= concurrencyUtils.o msgUtils.o logUtils.o
 
-server: server.c utils.h concurrencyUtils.o connectionUtils.o logUtils.o
-	gcc -g server.c concurrencyUtils.o connectionUtils.o logUtils.o -o server
-client: client.c utils.h concurrencyUtils.o connectionUtils.o logUtils.o
-	gcc -g server.c concurrencyUtils.o connectionUtils.o logUtils.o -o client
+all: server client
+		rm *.o
+		rm *.out
+
+server: server.c utils.h $(OBJ)
+	$(CC) $(CFLAGS) server.c $(OBJ) -o server
+client: client.c utils.h $(OBJ)
+	$(CC) $(CFLAGS) client.c $(OBJ) -o client
 
 concurrencyUtils.o: concurrencyUtils.h concurrencyUtils.c utils.h
-	gcc -g -c concurrencyUtils.c
-connectionUtils.o: connectionUtils.c connectionUtils.h utils.h
-	gcc -c connectionUtils.c
-logUtils.o : logUtils.c logUtils.h utils.h
-	gcc -c logUtils.c
+	$(CC) $(COFLAGS) concurrencyUtils.c
+msgUtils.o: msgUtils.c msgUtils.h utils.h
+	$(CC) $(COFLAGS) msgUtils.c
+logUtils.o: logUtils.c logUtils.h utils.h
+	$(CC) $(COFLAGS) logUtils.c
 
 clean:
-	rm *.o
+		rm *.o
