added client types and eddited makefile

--- a/src/makefile
+++ b/src/makefile
@@ -1,19 +1,43 @@
 CC=gcc
 CFLAGS=-g
 COFLAGS=-g -c
-OBJ= concurrencyUtils.o msgUtils.o logUtils.o
+OBJ= utils/concurrencyUtils.o utils/msgUtils.o utils/logUtils.o
+CLIENTS = clientImpl/udpClient.o clientImpl/tcpClient.o
 
-all: server client
-		rm *.o
+all: server client removeCompilationWaste
 
-server: server.c utils.h $(OBJ)
-	$(CC) $(CFLAGS) server.c $(OBJ) -o server
-client: client.c utils.h $(OBJ)
-	$(CC) $(CFLAGS) client.c $(OBJ) -o client
+runServer: server
+		rm utils/*.o
+		clear
+		echo "aqui va el comando para ejecutar"
+runClient: client
+		rm utils/*.o
+		rm clientImpl/*.o
+		clear
+		echo "aqui va el comando para ejecutar"
 
-concurrencyUtils.o: concurrencyUtils.h concurrencyUtils.c utils.h
-	$(CC) $(COFLAGS) concurrencyUtils.c
-msgUtils.o: msgUtils.c msgUtils.h utils.h
-	$(CC) $(COFLAGS) msgUtils.c
-logUtils.o: logUtils.c logUtils.h utils.h
-	$(CC) $(COFLAGS) logUtils.c
+clean:
+	rm client
+	rm server
+	clear
+
+removeCompilationWaste:
+		rm utils/*.o
+		rm clientImpl/*.o
+
+server: serverImpl/server.c utils/utils.h $(OBJ)
+	$(CC) $(CFLAGS) serverImpl/server.c $(OBJ) -o server
+client: clientImpl/client.c utils/utils.h $(OBJ) $(CLIENTS)
+	$(CC) $(CFLAGS) clientImpl/client.c $(OBJ) $(CLIENTS) -o client
+
+tcpClient.o: clientImpl/tcpClient.h clientImpl/tcpClient.c utils/utils.h
+	$(CC) $(COFLAGS) clientImpl/tcpClient.c
+udpClient.o: clientImpl/udpClient.h clientImpl/udpClient.c utils/utils.h
+		$(CC) $(COFLAGS) clientImpl/udpClient.c
+
+concurrencyUtils.o: utils/concurrencyUtils.h utils/concurrencyUtils.c utils/utils.h
+	$(CC) $(COFLAGS) utils/concurrencyUtils.c
+msgUtils.o: utils/msgUtils.c utils/msgUtils.h utils/utils.h
+	$(CC) $(COFLAGS) utils/msgUtils.c
+logUtils.o: utils/logUtils.c utils/logUtils.h utils/utils.h
+	$(CC) $(COFLAGS) utils/logUtils.c
