--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS=-g
 COFLAGS=-g -c
 OBJ= utils/msgUtils.o
-SERVER_IP = 192.168.70.1
+SERVER_IP = 192.168.1.39
 
 #only for olivo
 LIBS= -lsocket -lnsl
@@ -11,10 +11,7 @@ all: server client removeCompilationWaste
 
 run: server client removeCompilationWaste
 		./server &
-		./client $(SERVER_IP) TCP r test.mp4 &
-		./client $(SERVER_IP) TCP w test.mp3 &
-		./client $(SERVER_IP) TCP r test.mid &
-		./client $(SERVER_IP) TCP w bible.txt &
+		./client $(SERVER_IP) UDP r bible.txt &
 
 runServer: server removeCompilationWaste
 		clear
@@ -22,7 +19,7 @@ runServer: server removeCompilationWaste
 
 runClient: client removeCompilationWaste
 		clear
-		./client $(SERVER_IP) TCP r bible.txt
+		./client $(SERVER_IP) UDP r bible.txt
 clean:
 	rm client
 	rm server
