write added with retries

--- a/src/makefile
+++ b/src/makefile
@@ -13,7 +13,7 @@ TFTPserver: TFTPserver.c utils.h $(OBJ)
 TFTPclient: TFTPclient.c utils.h $(OBJ) 
 	$(CC) $(CFLAGS) TFTPclient.c $(OBJ) $(LIBS) -o TFTPclient
 msgUtils.o: msgUtils.c msgUtils.h utils.h
-	$(CC) $(COFLAGS) $(LIBS) msgUtils.c
+	$(CC) $(COFLAGS) msgUtils.c
 
 removeCompilationWaste:
 	rm *.o
