added last requeriments

--- a/src/makefile
+++ b/src/makefile
@@ -4,12 +4,13 @@ COFLAGS=-g -c
 OBJ= msgUtils.o
 LIBS=-lsocket -lnsl
 
-all: TFTPserver TFTPclient removeCompilationWaste
+all: servidor cliente removeCompilationWaste
 	
-TFTPserver: TFTPserver.c utils.h $(OBJ)
-	$(CC) $(CFLAGS) TFTPserver.c $(OBJ) $(LIBS) -o TFTPserver
-TFTPclient: TFTPclient.c utils.h $(OBJ) 
-	$(CC) $(CFLAGS) TFTPclient.c $(OBJ) $(LIBS) -o TFTPclient
+servidor: TFTPserver.c utils.h $(OBJ)
+	$(CC) $(CFLAGS) TFTPserver.c $(OBJ) $(LIBS) -o servidor
+cliente: TFTPclient.c utils.h $(OBJ) 
+	$(CC) $(CFLAGS) TFTPclient.c $(OBJ) $(LIBS) -o cliente
+	
 msgUtils.o: msgUtils.c msgUtils.h utils.h
 	$(CC) $(COFLAGS) msgUtils.c
 
