--- a/src/makefile
+++ b/src/makefile
@@ -2,16 +2,15 @@ CC=gcc
 CFLAGS=-g
 COFLAGS=-g -c
 OBJ= msgUtils.o
+LIBS=-lsocket -lnsl
 
-#LIBS= -lsocket -lnsl
-LIBS= 
-
-all: TFTPserver TFTPclient removeCompilationWaste
-
-TFTPserver: TFTPserver.c utils.h $(OBJ)
-	$(CC) $(CFLAGS) TFTPserver.c $(OBJ) $(LIBS) -o TFTPserver
-TFTPclient: TFTPclient.c utils.h $(OBJ) 
-	$(CC) $(CFLAGS) TFTPclient.c $(OBJ) $(LIBS) -o TFTPclient
+all: servidor cliente removeCompilationWaste
+	
+servidor: TFTPserver.c utils.h $(OBJ)
+	$(CC) $(CFLAGS) TFTPserver.c $(OBJ) $(LIBS) -o servidor
+cliente: TFTPclient.c utils.h $(OBJ) 
+	$(CC) $(CFLAGS) TFTPclient.c $(OBJ) $(LIBS) -o cliente
+	
 msgUtils.o: msgUtils.c msgUtils.h utils.h
 	$(CC) $(COFLAGS) msgUtils.c
 
